fix: Permission resourceId 호환 문제 없도록 Long 에서 String 으로 변경